[build-system]
requires = ["setuptools>=61.0", "seleniumbase"]
build-backend = "setuptools.build_meta"

[project]
name = "google-login"
version = "0.3.1rc"
authors = [
  { name="Fakesum", email="worldanvilbild+github@gmail.com" },
]
description = "a Library for google login"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Fakesum/cimport"
"Bug Tracker" = "https://github.com/Fakesum/cimport/issues"